# colab-gsoc2018-JianxiongCai

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/DBoW2-ext/: ORBVocabularyExt.h  TemplatedVocabularyExt.cpp  TemplatedVocabularyExt.h
src/bak/: LoopDetection.cpp.bak
src/common/: Config.cc  Config.h  KeyFrame.cc  KeyFrame.h  Map.cc  Map.h  MapPoint.cc  MapPoint.h  log.h
src/config/: LoopDetectionConfig.cpp  LoopDetectionConfig.h
src/config-gen/: config-gen.cpp
src/logging/: logging_util.h.in
src/loop-detector/: LoopDetection.cpp  LoopDetector.cpp  LoopDetector.h
src/utils/: logging_util.h
test/: test.cpp
